desktop design has been made

--- a/index.html
+++ b/index.html
@@ -3,17 +3,93 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title></title>
+    <title>Boxing || Made by Sahitya</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
-    <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
+    <nav class="nav">
+        <ul class="nav-items">
+            <li class="nav-item">
+                <a href="/">Home</a>
 
+
+            </li>
+            <li class="nav-item">
+                <a href="/service">Service</a>
+            </li>
+            <li class="nav-item">
+                <a href="/about">About</a>
+            </li>
+            <li class="nav-item">
+                <a href="/contact">Contact</a>
+            </li>
+        </ul>
+    </nav>
+    <main>
+
+        <section class="container">
+            <div class="description">
+                <h1>
+                    Lorem ipsum dolor, sit amet consectetur
+                </h1>
+                <p>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquam dolore similique eaque totam, quo
+                    rerum nobis voluptatem quae quaerat amet aspernatur dignissimos aut delectus aperiam officiis? Lorem
+                    ipsum dolor sit amet consectetur adipisicing elit. Voluptates rem nisi voluptas blanditiis a unde
+                    vitae impedit accusantium? Porro ipsum, illo itaque vitae obcaecati soluta dicta mollitia vel
+                    reprehenderit!
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam itaque porro modi? Iste accusamus
+                    sapiente recusandae quia nobis exercitationem dolorum. Provident, rem quae minus praesentium
+                    repellendus ipsa reprehenderit mollitia quidem.
+                </p>
+                <button class="button">Lorem, ipsum.</button>
+            </div>
+            <div class="logo-container">
+                <img src="./images/logo.png" alt="boxing-logo-from-logopond">
+            </div>
+            <div class="logo-credit">
+                <p>
+                    The logo is downloaded from
+                    <span class="" style="text-transform: uppercase; font-weight: bold;">
+                        logopond
+
+                    </span>
+                </p>
+                <p style="
+                font-size: 0.7rem;">
+                    Made By ArtisticHorizons
+                </p>
+
+            </div>
+        </section>
+
+        <section class="other-section">
+            <div>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem assumenda repudiandae amet, explicabo
+
+            </div>
+            <div>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis excepturi incidunt animi fugiat vitae
+                perspiciatis
+            </div>
+            <div>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quis debitis at perferendis dolorum unde
+                    aut! Quod voluptas nesciunt architecto perferendis!</p>
+                <p>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quae ex iure animi nulla ab cum autem
+                    enim, alias delectus ea? At maiores veritatis ipsa.
+                </p>
+                <button class="button">Lorem, ipsum.</button>
+            </div>
+
+        </section>
+
+    </main>
     <script src="" async defer></script>
 </body>
 
