edit index href

--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
 
             </li>
             <li class="nav-item">
-                <a href="/service">Service</a>
+                <a href="/">Service</a>
             </li>
             <li class="nav-item">
-                <a href="/about">About</a>
+                <a href="/">About</a>
             </li>
             <li class="nav-item">
-                <a href="/contact">Contact</a>
+                <a href="/">Contact</a>
             </li>
         </ul>
     </nav>
